--- a/etc.html
+++ b/etc.html
@@ -119,7 +119,7 @@
 								</div>
 								<!--end::Search Results -->
 							</div>
-							<!--end::Search-->				
+							<!--end::Search-->
 							<!-- begin::Topbar -->
 							<div class="m-stack__item m-stack__item--right m-header-head" id="m_header_nav">
 								<div id="m_header_topbar" class="m-topbar  m-stack m-stack--ver m-stack--general">
@@ -266,11 +266,11 @@
 								
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-dark m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-light m-aside-header-menu-mobile--submenu-skin-light "  >		
 									<ul class="m-menu__nav  m-menu__nav--submenu-arrow ">
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="index.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">회원 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="questionaire.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">종목 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="statistics.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">통계 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="sales.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">매출 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="customer_service.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">고객 지원</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"><a href="index.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">회원 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"><a href="questionaire.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">종목 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"><a href="statistics.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">통계 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"><a href="sales.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">매출 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--tabs"><a href="customer_service.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">고객 지원</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a></li>
 										<li class="m-menu__item  m-menu__item--active  m-menu__item--active-tab  m-menu__item--submenu m-menu__item--tabs"  m-menu-submenu-toggle="tab" aria-haspopup="true"><a href="etc.html" class="m-menu__link m-menu__toggle"><span class="m-menu__link-text">기타 관리</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 											<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left m-menu__submenu--tabs"><span class="m-menu__arrow m-menu__arrow--adjust"></span>
 												<ul class="m-menu__subnav">
