--- a/questionaire.html
+++ b/questionaire.html
@@ -365,27 +365,11 @@
                     </div>    
                     <div class="row">
                         <div class="col-12">
-                            <table class="table m-table m-table--head-separator-danger table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>순서</th>
-                                        <th>이름</th>
-                                        <th>별명</th>
-                                        <th>이메일</th>
-                                        <th>전화번호</th>
-                                        <th>가입일</th>
-                                        <th>마지막 접속 일자</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td colspan="8">표시할 회원 정보가 없습니다.</td>
-                                    </tr>
-                                    <tr>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="h5">소분류</span>
+                                <button class="btn btn-sm m-btn btn-outline-brand btn-add-questionaire" data-toggle="modal" data-target="#AddQuestionaireModal">+ 추가</button>
+                            </div>
+                            <div class="m-datatable mt-1 question-item-table"></div>
                         </div>
                     </div>
                 </div>
